--- a/Lab_Week1/lab1_Introduction.ipynb
+++ b/Lab_Week1/lab1_Introduction.ipynb
@@ -577,6 +577,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -630,13 +637,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person:2\n",
+      "cat:4\n",
+      "spider:8\n",
+      "A person has 2 legs\n",
+      "A cat has 4 legs\n",
+      "A spider has 8 legs\n"
+     ]
+    }
+   ],
    "source": [
     "dict = {'person': 2, 'cat': 4, 'spider': 8}\n",
     "# TODO: loop over the dictionary and print the number of legs for each animal\n",
-    "# Prints \"A person has 2 legs\", \"A cat has 4 legs\", \"A spider has 8 legs\""
+    "# Prints \"A person has 2 legs\", \"A cat has 4 legs\", \"A spider has 8 legs\"\n",
+    "for key in dict:\n",
+    "    print(f\"{key}:{dict[key]}\")\n",
+    "for key,value in dict.items():\n",
+    "    print(f\"A {key} has {value} legs\")"
    ]
   },
   {
@@ -926,7 +950,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "comp3122 (3.13.1)",
    "language": "python",
    "name": "python3"
   },
@@ -940,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
