update code file

--- a/Lab_Week1/lab1_Introduction.ipynb
+++ b/Lab_Week1/lab1_Introduction.ipynb
@@ -146,11 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:Otto Gnome height:12.7\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: print the variables above with suitable labels"
+    "#TODO: print the variables above with suitable labels\n",
+    "name = \"Otto\"\n",
+    "gnome_height = 12.7\n",
+    "dog_age = 7\n",
+    "print(f\"Name:{name} Gnome height:{gnome_height}\")"
    ]
   },
   {
@@ -204,11 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Plot Y vs. X"
+    "# TODO: Plot Y vs. X\n",
+    "plt"
    ]
   },
   {
@@ -950,7 +963,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "comp3122 (3.13.1)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
