--- a/Lab_Week2/lab2_PythonRecap.ipynb
+++ b/Lab_Week2/lab2_PythonRecap.ipynb
@@ -226,7 +226,14 @@
    "source": [
     "def frequent_words_finder(text):\n",
     "    #your code here\n",
-    "\n",
+    "    count_occur={}\n",
+    "    text = text.lower()\n",
+    "    word_list=text.split()\n",
+    "    for word in word_list:\n",
+    "        count_occur[word]=count_occur.get(word,0)+1\n",
+    "    \n",
+    "    sorted_count = sorted(count_occur.items(), key=lambda item:item[1] reverse=True)[:3] \n",
+    "    return sorted_count   \n",
     "            \n",
     "\n",
     "print(frequent_words_finder(\"The sun sets in the west, and the sun rises in the east.\"))\n",
