--- a/Lab_Week3_Numpy/lab3_Exercise.ipynb
+++ b/Lab_Week3_Numpy/lab3_Exercise.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "bgbCoN5ix2bq"
       },
@@ -494,12 +494,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "Ko9OoG_xx2bu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ko9OoG_xx2bu",
+        "outputId": "b1704f01-74ec-4c85-920c-ffb249451da6"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
+      "source": [
+        "np.ones(10)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -512,12 +529,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "pKdC_xCRx2bu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pKdC_xCRx2bu",
+        "outputId": "34b6d4bc-b356-4677-992b-0eafae3b061d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ],
+      "source": [
+        "np.ones(10) * 5"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -530,12 +564,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "xSQd7J4Yx2bu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xSQd7J4Yx2bu",
+        "outputId": "19ff11f2-7cbd-4bb1-8844-186a5c1fabab"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+              "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
+              "       44, 45, 46, 47, 48, 49, 50])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
+      "source": [
+        "np.arange(10, 51)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -548,11 +601,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "YzOw6BDPx2bv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YzOw6BDPx2bv",
+        "outputId": "cb935436-63f5-4dba-d4e7-010aa9aaa3a8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4.1768665 , 1.07033279, 0.7846438 , 3.18405681, 1.27260556,\n",
+              "       2.43195879, 4.63388763, 1.91023326, 1.03926283, 3.61216094])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
       "source": []
     },
     {
@@ -567,12 +636,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "fZEJtLjox2bv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fZEJtLjox2bv",
+        "outputId": "1fc92613-2bbd-4402-fad2-e17c95e03dc7"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0. , 0.2, 0.4, 0.6, 0.8, 1. , 1.2, 1.4, 1.6, 1.8, 2. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
+      "source": [
+        "np.linspace(0, 2, 11)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -585,12 +671,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "cXLySfcCx2bv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cXLySfcCx2bv",
+        "outputId": "d514bc85-d89c-4b4d-a821-f68ff23591a3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
+      "source": [
+        "np.ones((3, 4))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -603,12 +708,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "Mhf28ve6x2b8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mhf28ve6x2b8",
+        "outputId": "64dc9047-86dc-49d0-dd0d-262ff338abb2"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5., 5., 5., 5.],\n",
+              "       [5., 5., 5., 5.],\n",
+              "       [5., 5., 5., 5.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
+      "source": [
+        "np.ones((3, 4)) * 5"
+      ]
     },
     {
       "cell_type": "markdown",
