--- a/Lab_Week3_Numpy/lab3_Exercise.ipynb
+++ b/Lab_Week3_Numpy/lab3_Exercise.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 15,
       "metadata": {
         "id": "bgbCoN5ix2bq"
       },
@@ -746,21 +746,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "LGNywOflx2b9",
-        "outputId": "12a7217c-8288-479f-ab87-fb6a6b096ed7"
+        "outputId": "db884009-53ea-426b-9705-1c88632c02e9"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20])"
             ]
           },
-          "execution_count": 4,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 22
         }
       ],
       "source": [
@@ -770,13 +773,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "dlii-fb4x2b9",
-        "outputId": "6a4dc4fe-e416-4359-b262-bdfdfe850ed6"
+        "outputId": "5586e143-d5a7-4b5d-b5de-da52d094ca6f"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[ 1,  2,  3,  4,  5,  6,  7],\n",
@@ -784,9 +791,8 @@
               "       [15, 16, 17, 18, 19, 20, 21]])"
             ]
           },
-          "execution_count": 20,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 20
         }
       ],
       "source": [
@@ -806,24 +812,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "lk8u5ZCEx2b9",
-        "outputId": "019f5023-8c37-41db-858c-afe9fef615cd"
+        "outputId": "e4d5c5ed-97e6-421c-8cf3-a91fa13de8a4"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([10, 11, 12, 13])"
             ]
           },
-          "execution_count": 125,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 23
         }
       ],
-      "source": []
+      "source": [
+        "a[:4]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -836,12 +847,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "Loz0viM2x2b9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Loz0viM2x2b9",
+        "outputId": "f0036f75-595d-4076-dd16-a16caa689e6d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([18, 19, 20])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ],
+      "source": [
+        "a[-3:]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -854,12 +882,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "Gc-eQSuAx2b9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gc-eQSuAx2b9",
+        "outputId": "ee417cc4-63a9-4e32-8e13-36c660622408"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([15, 16, 17, 18])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ],
+      "source": [
+        "a[(a >= 15) & (a <= 18)]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -872,12 +917,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "f_KjiGTsx2b9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f_KjiGTsx2b9",
+        "outputId": "6e98d109-3e05-489d-bc51-d2e66cd0be6d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1,  8, 15])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ],
+      "source": [
+        "m[:, 0]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -890,12 +952,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "AD8_J5yXx2b-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AD8_J5yXx2b-",
+        "outputId": "99f9654a-14f5-40c2-fdaa-822b6174be7d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 8,  9, 10, 11, 12, 13, 14])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ],
+      "source": [
+        "m[1,:]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -908,26 +987,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "efI267-Xx2b-",
-        "outputId": "676eaf4c-3e48-46a9-a23a-39ca5d90248f"
+        "outputId": "2532f87d-b4ce-4a5e-df8b-7438300da53e"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 1,  2,  3],\n",
-              "       [ 8,  9, 10],\n",
-              "       [15, 16, 17]])"
+              "array([[ 5,  6,  7],\n",
+              "       [12, 13, 14],\n",
+              "       [19, 20, 21]])"
             ]
           },
-          "execution_count": 130,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 27
         }
       ],
-      "source": []
+      "source": [
+        "m[:,-3:]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -940,25 +1024,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "7VAS_yjvx2b-",
-        "outputId": "193d99ca-5406-42c2-be6f-bad5553e804e"
+        "outputId": "f8633a81-b82c-46fd-d7c5-40a1df9a4844"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[13, 14],\n",
-              "       [20, 21]])"
+              "array([13, 20])"
             ]
           },
-          "execution_count": 131,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 28
         }
       ],
-      "source": []
+      "source": [
+        "m[1:,-2]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -972,24 +1060,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "4mfzxUCYx2b-",
-        "outputId": "4c2ff52c-0b35-415b-b04e-97d24d662688"
+        "outputId": "c1c4ec9c-56ad-4c26-d0ab-dd15b6ddd9d8"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([10, 12, 14, 16, 18, 20])"
             ]
           },
-          "execution_count": 132,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 29
         }
       ],
-      "source": []
+      "source": [
+        "a[::2]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1003,12 +1096,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "DYuHf1YPx2b-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DYuHf1YPx2b-",
+        "outputId": "8ccfeb8e-07a6-407e-8fb4-d680269f7890"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True, False,  True, False,  True, False,  True, False,  True,\n",
+              "       False,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
+      "source": [
+        "mask=a%2==0\n",
+        "mask"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[mask]"
+      ],
+      "metadata": {
+        "id": "4QXgnPJr8RZg"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
