--- a/Lab_Week3_Numpy/lab3_Exercise.ipynb
+++ b/Lab_Week3_Numpy/lab3_Exercise.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {
         "id": "bgbCoN5ix2bq"
       },
@@ -494,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -529,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -564,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,7 +601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -636,7 +636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -671,13 +671,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cXLySfcCx2bv",
-        "outputId": "d514bc85-d89c-4b4d-a821-f68ff23591a3"
+        "outputId": "88619e78-f312-4602-e4bd-b9ef3ee0b132"
       },
       "outputs": [
         {
@@ -690,7 +690,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 19
         }
       ],
       "source": [
@@ -708,7 +708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -746,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -773,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -847,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -882,7 +882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -917,7 +917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -952,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -987,7 +987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1024,13 +1024,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7VAS_yjvx2b-",
-        "outputId": "f8633a81-b82c-46fd-d7c5-40a1df9a4844"
+        "outputId": "6b3b8f50-4bd4-4aa0-8338-af638f236e9a"
       },
       "outputs": [
         {
@@ -1041,7 +1041,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 16
         }
       ],
       "source": [
@@ -1060,13 +1060,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4mfzxUCYx2b-",
-        "outputId": "c1c4ec9c-56ad-4c26-d0ab-dd15b6ddd9d8"
+        "outputId": "c0bf8026-1d5d-45a3-e39e-437d1ba925f6"
       },
       "outputs": [
         {
@@ -1077,7 +1077,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 17
         }
       ],
       "source": [
@@ -1096,13 +1096,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DYuHf1YPx2b-",
-        "outputId": "8ccfeb8e-07a6-407e-8fb4-d680269f7890"
+        "outputId": "aa2519e7-b931-49de-e315-7be7a4b8e054"
       },
       "outputs": [
         {
@@ -1114,7 +1114,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 18
         }
       ],
       "source": [
@@ -1153,24 +1153,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "metadata": {
+        "id": "4c91d522"
+      },
+      "source": [
+        "a = np.arange(10,21)"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
       "metadata": {
         "id": "iw8PqJ9Wx2b-",
-        "outputId": "f5f7cdd9-07bd-4bfb-b28b-fb5a9ceb0d85"
+        "outputId": "87b3a009-6351-4183-891d-c70b6f0a1de2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
             "text/plain": [
               "array([ 5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
             ]
           },
-          "execution_count": 134,
-          "metadata": {},
-          "output_type": "execute_result"
+          "metadata": {}
         }
       ],
-      "source": []
+      "source": [
+        "display(a - 5)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1183,12 +1199,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "CY-Vxs_Hx2b_"
+        "id": "CY-Vxs_Hx2b_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9f14b0c7-f08b-4f6a-c32f-bc1a22abf6e0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "np.int64(165)"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
+      "source": [
+        "display(a.sum())"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1202,12 +1235,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "owaoATrTx2b_"
+        "id": "owaoATrTx2b_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "1ee65bf1-9645-4620-8baa-7698e6b46044"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "array([24, 27, 30, 33, 36, 39, 42])"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "array([ 28,  77, 126])"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
+      "source": [
+        "display(m.sum(axis=0)) # sum of columns\n",
+        "display(m.sum(axis=1)) # sum of rows"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1220,12 +1280,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "CtYGELJUx2b_"
+        "id": "CtYGELJUx2b_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "794b3fe1-02ac-48dd-90a0-512de4d5927b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "array([  1,   4,   9,  16,  25,  36,  49,  64,  81, 100])"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
+      "source": [
+        "display(np.arange(1, 11)**2)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1238,12 +1315,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "Hv1zGONcx2b_"
+        "id": "Hv1zGONcx2b_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "43b7926c-587e-4dc3-c02a-f4af5a0547f3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "array([   1,    2,    4,    8,   16,   32,   64,  128,  256,  512, 1024])"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
+      "source": [
+        "display(2**np.arange(11))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1256,12 +1350,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "K4fluROsx2b_"
+        "id": "K4fluROsx2b_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1fc0ea1d-30d0-4a4a-bbb9-54065fec5da0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "array([   0,    1,    3,    7,   15,   31,   63,  127,  255,  511, 1023])"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
+      "source": [
+        "display(2**np.arange(11) - 1)"
+      ]
     },
     {
       "cell_type": "markdown",
